# iptools

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md  TODO.md  config.example.json  config.json  install.sh  iptools.json  rust-toolchain.toml  功能列表.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/locales/: en-US.json  zh-CN.json
crates/iptools-core/: Cargo.toml
crates/iptools-core/src/: config.rs  effect.rs  input.rs  lib.rs  link_quality.rs  model.rs
crates/iptools-demo/: Cargo.toml
crates/iptools-demo/scenarios/: home-network.json  multi-adapter.json  wifi-degraded.json
crates/iptools-demo/src/: lib.rs
crates/iptools-native/: Cargo.toml
crates/iptools-native/src/: app.rs  config.rs  demo.rs  event.rs  frontend.rs  keymap.rs  main.rs  native_app.rs  runtime.rs  session.rs  tui.rs
crates/iptools-native/src/modules/: adapter.rs  adapter_edit.rs  dashboard.rs  scanner.rs  settings.rs  traffic.rs
crates/iptools-native/src/modules/diagnostics/: icmp.rs  link_quality.rs  mod.rs  ping.rs  port_scan.rs  public_speed.rs  trace.rs
crates/iptools-native/src/modules/diagnostics/lan_speed/: mod.rs  proto.rs
crates/iptools-native/src/runtime/: adapter_edit.rs  dashboard.rs  diagnostics.rs  network_read.rs  port_scan.rs  scanner.rs
crates/iptools-native/src/ui/: mru.rs
crates/iptools-native/src/utils/: i18n.rs  ipconfig.rs  mod.rs  net.rs  oui.rs  pubip.rs  services.rs  textinput.rs  wlan.rs
crates/iptools-ui/: Cargo.toml
crates/iptools-ui/src/: lib.rs
crates/iptools-web/: Cargo.toml  Trunk.toml  index.html  manifest.webmanifest  package-lock.json  package.json  service-worker.js  styles.css
crates/iptools-web/assets/fonts/: README.md
crates/iptools-web/src/: lib.rs
crates/iptools-web/tests/: e2e.mjs
docs/: architecture.md  link-quality-guide.md  linux-porting-report.md  manual-acceptance-v0.4.md  ui-compatibility.md
docs/superpowers/plans/: 2026-06-09-link-quality-enhancement.md
docs/superpowers/specs/: 2026-06-09-link-quality-enhancement-design.md
scripts/: build-web.ps1  check-architecture.ps1  check-web-size.ps1  subset-web-font.py  verify-web-font.ps1  verify.ps1
src/: app.rs  config.rs  event.rs  history.rs  keymap.rs  main.rs  session.rs  tui.rs
src/modules/: adapter.rs  adapter_edit.rs  dashboard.rs  mod.rs  scanner.rs  settings.rs  traffic.rs
src/modules/diagnostics/: icmp.rs  lan_speed.rs  link_quality.rs  mod.rs  ping.rs  port_scan.rs  public_speed.rs  trace.rs
src/modules/diagnostics/lan_speed/: mod.rs  proto.rs
src/ui/: mod.rs  mru.rs  theme.rs
src/utils/: format.rs  i18n.rs  ipconfig.rs  mod.rs  net.rs  pubip.rs  textinput.rs  wlan.rs
