[package]
name = "iptools"
version = "0.3.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A modular, cross-platform IP management and testing CLI tool."

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1.0"
sysinfo = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
ipnetwork = "0.20"
dns-lookup = "2.0"
unicode-width = "0.1"
rand = "0.8"

# 非 Windows（unix）平台依赖：
#   surge-ping —— ping.rs 持续发包（已工作，保留）
#   socket2    —— icmp.rs raw ICMP（设 TTL、绑定源、收 Time-Exceeded）
#   nix        —— getifaddrs / if_nametoindex（网卡枚举、出口网卡定位）
#   libc       —— AF_PACKET 原始套接字（主动 ARP）
[target.'cfg(unix)'.dependencies]
surge-ping = "0.8"
# features=["all"]：启用 Type::RAW / Protocol::ICMPV4 等（默认 feature 不含）
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.29", features = ["net"] }
libc = "0.2"

# Windows 平台专用依赖
[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
encoding_rs = "0.8" 
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_IO",
] }
# IP 配置写入：用 wmi 封装 COM/WMI，避免手写 VARIANT/SAFEARRAY FFI
wmi = "0.18.4"
