[package]
name = "iptools"
version = "0.3.1"
edition = "2021"
authors = ["newcovid"]
description = "A cross-platform TUI for IP management and network diagnostics."
license = "MIT"
repository = "https://github.com/newcovid/iptools"
readme = "README.md"
keywords = ["network", "tui", "ip", "diagnostics", "ratatui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1.0"
sysinfo = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
ipnetwork = "0.20"
dns-lookup = "2.0"
unicode-width = "0.1"
rand = "0.8"

# Unix networking backends.
[target.'cfg(unix)'.dependencies]
surge-ping = "0.8"
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.29", features = ["net"] }
libc = "0.2"

# Windows networking backends.
[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
encoding_rs = "0.8"
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_IO",
] }
wmi = "0.18.4"
