[workspace]
resolver = "2"
members = [
    "crates/iptools-core",
    "crates/iptools-ui",
    "crates/iptools-demo",
    "crates/iptools-native",
    "crates/iptools-web",
]
default-members = ["crates/iptools-native"]

[workspace.package]
version = "0.4.2"
edition = "2024"
rust-version = "1.97"
authors = ["newcovid"]
license = "MIT"
repository = "https://github.com/newcovid/iptools"

[workspace.dependencies]
anyhow = "1.0"
atomic-write-file = "0.3.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3"
ipnetwork = "0.21.1"
ratatui = { version = "0.30.2", default-features = false, features = ["all-widgets", "layout-cache", "std"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.39.6"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2.2"
iptools-core = { path = "crates/iptools-core" }
iptools-ui = { path = "crates/iptools-ui" }
iptools-demo = { path = "crates/iptools-demo" }

[patch.crates-io]
# Ratzilla 0.3.1 clips every non-ASCII Canvas glyph to one cell and can resize
# its DOM cell vector mid-frame. Keep the pin, with two narrow upstream fixes.
ratzilla = { path = "vendor/ratzilla" }
